hphp/test/slow/parser/static_call_access_const_expr.php.expectf

Fatal error: syntax error, unexpected '(', expecting ',' or ';' in %s/static_call_access_const_expr.php on line 10
